syntax = "proto3";

package food;

option go_package = "./proto";

service FoodService {
    rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
    rpc ListFoods(ListFoodsRequest) returns (ListFoodsResponse) {}
    rpc SearchFoods(SearchFoodsRequest) returns (SearchFoodsResponse) {}
}

// FindOne
message FoodData {
    int64 id = 1;
    string name = 2;
    double protein = 3;
    double fat = 4;
    double carbohydrate = 5;
    int64 category = 6;
}

message FindOneRequest {
    string name = 1;
}

message FindOneResponse {
    int64 status = 1;
    FoodData data = 2;
}

// ListFoods
message ListFoodsRequest {}

message ListFoodsResponse {
    int64 status = 1;
    repeated FoodData food_list = 2;
}

// SearchFoods
message SearchFoodsRequest {
    string name = 1;
}

message SearchFoodsResponse {
    int64 status = 1;
    repeated FoodData food_list = 2;
}
